# mesh-visualization-

./: .gitignore  README.md  add_ip_alias.sh  fix_mqtt_and_start.sh  monitor_mqtt.js  package-lock.json  start_mqtt_broker.sh
docs/: api.md  architecture.md
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults  upload.sh
firmware/main/: beacon_monitor.cpp  beacon_monitor.h  config.h  main.cpp  mesh_node.cpp  mesh_node.h  state_manager.cpp  state_manager.h
firmware/platformio/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.seeed_xiao_esp32c3  sdkconfig.seeed_xiao_esp32c6  upload.sh
firmware/platformio/include/: beacon_monitor.h  config.h  esp32_arduino_compat.h  mesh_node.h  mqtt_handler.h  state_manager.h
firmware/platformio/src/: CMakeLists.txt  beacon_monitor.cpp  beacon_monitor.cpp.bak  idf_component.yml  main.cpp  mesh_node.cpp  mesh_node.cpp.bak  mqtt_handler.cpp  state_manager.cpp  state_manager.cpp.bak
visualization/app/: package-lock.json  package.json  server.js
visualization/app/public/: index.html  script.js  style.css
visualization/app2/: package-lock.json  package.json  server.js
visualization/app2/public/: index.html  script.js  style.css
